Manifests/reference-grant.yaml
#apiVersion: gateway.networking.k8s.io/v1beta1
#kind: ReferenceGrant
#metadata:
#  name: allow-argocd-route
#  namespace: argocd # ✅ Grant access from `default` to `argocd`
#spec:
#  from:
#  - group: gateway.networking.k8s.io
#    kind: HTTPRoute
#    namespace: default  # ✅ Allow HTTPRoute from `default` namespace
#  to:
#  - group: ""  # ✅ Allow access to core resources like Services
#    kind: Service
#    name: argocd-server  # ✅ Allow only this service

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-monitoring-route
  namespace: monitoring # ✅ Grant access from `default` to `monitoring`
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default  # ✅ Allow HTTPRoute from `default` namespace
  to:
  - group: ""  # ✅ Allow access to core resources like Services
    kind: Service
    name: prometheus-grafana
