Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flappy-app-service
  annotations:
    #alb.networking.azure.io/health-probe-port: "3000"
    #alb.networking.azure.io/health-probe-path: "/login"
spec:
  selector:
    app: flappy-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
