Manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
  namespace: default
spec:
  parentRefs:
  - name: gateway-01
    kind: Gateway
    namespace: default 

  rules:
#    - matches:
#        - path:
#            type: PathPrefix
#            value: /argocd
#      backendRefs:
#        - name: argocd-server
#          kind: Service
#          port: 80
#          namespace: argocd
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-grafana
          kind: Service
          port: 80
          namespace: monitoring

#    - matches:
#        - path:
#            type: PathPrefix
#            value: /
#      backendRefs:
#        - name: flappy-app-service
#          kind: Service
#          port: 80
